--- a/undergraduate.html
+++ b/undergraduate.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="">
 
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="http://www.jsu.edu/_common/_files/images/favicon.ico">
 
 	<!-- Web Fonts -->
 	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400,300,600&amp;subset=cyrillic,latin">
@@ -143,13 +143,13 @@
 														<div class="col-sm-3 md-margin-bottom-30">
 															<div class="blog-grid">
 																<img class="img-responsive" src="assets/img/main/img1.jpg" alt="">
-																<h3 class="blog-grid-title-sm"><a href="#">English Language Institute</a></h3>
+																<h3 class="blog-grid-title-sm"><a href="eli.html">English Language Institute</a></h3>
 															</div>
 														</div>
 														<div class="col-sm-3 md-margin-bottom-30">
 															<div class="blog-grid">
 																<img class="img-responsive" src="assets/img/main/img11.jpg" alt="">
-																<h3 class="blog-grid-title-sm"><a href="#">International House Program</a></h3>
+																<h3 class="blog-grid-title-sm"><a href="ihop.html">International House Program</a></h3>
 															</div>
 														</div>
 														<div class="col-sm-3 md-margin-bottom-30">
@@ -161,7 +161,7 @@
 														<div class="col-sm-3 sm-margin-bottom-30">
 															<div class="blog-grid">
 																<img class="img-responsive" src="assets/img/main/img21.jpg" alt="">
-																<h3 class="blog-grid-title-sm"><a href="#">Graduate</a></h3>
+																<h3 class="blog-grid-title-sm"><a href="graduate.html">Graduate</a></h3>
 															</div>
 														</div>
 													</div>
