--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 	<!-- CSS Theme -->
-	<link rel="stylesheet" href="assets/css/theme-colors/default.css" id="style_color">
+	<link rel="stylesheet" href="assets/css/theme-colors/red.css" id="style_color">
 	<link rel="stylesheet" href="assets/css/theme-skins/dark.css">
 
 	<!-- CSS Customization -->
@@ -577,8 +577,9 @@ Apply									</a>
 			<div class="container">
 				<div class="call-action-v1-box">
 					<div class="call-action-v1-in">
+					  <h3>We are known as <italic>"The Friendliest Campus in the South" do not hesitate in</italic></h3>
 					  <h3>Contact us at <strong class="color-darker">intladmissions@jsu.edu</strong> or give us a call <strong class="color-darker">+1 (256) 782 5303</strong></h3>
-					  <p>Unify creative technology company providing key digital services and focused on helping our clients to build a successful business on web and mobile.</p>
+						
 				  </div>
 					<div class="call-action-v1-in inner-btn page-scroll">
 						<a href="#portfolio" class="btn-u btn-u-lg btn-brd btn-brd-width-2 btn-brd-hover btn-u-dark btn-u-block">Apply Today</a>
@@ -642,7 +643,7 @@ Apply									</a>
 				</div><!--/end Headline Center-->
 
 				<!-- Portfolio Box -->
-				<ul class="list-unstyled row portfolio-box">
+				<ul class="list-unstyled row port	folio-box">
 					<li class="col-sm-6 md-margin-bottom-50">
 						<a href="assets/img/main/img9.jpg" title="Project One" data-rel="gallery" class="thumbnail fancybox">
 							<img alt="" src="assets/img/main/img9.jpg" class="full-width img-responsive">
@@ -671,9 +672,9 @@ Apply									</a>
 					</li>
 					<li class="col-sm-6">
 						<a href="assets/img/main/img18.jpg" title="Project Three" data-rel="gallery" class="thumbnail fancybox">
-							<img alt="" src="assets/img/main/img18.jpg" class="full-width img-responsive">
+							<img src="assets/img/main/img18.jpg" class="full-width img-responsive">
 							<span class="rounded-x portfolio-box-in">
-								<i class="icon-magnifier-add"></i>
+								<em class="icon-magnifier-add"></em>
 							</span>
 						</a>
 						<div class="headline-left margin-bottom-10">
@@ -772,7 +773,7 @@ Apply									</a>
 			<div class="flat-testimonials bg-image-v1 parallaxBg1 margin-bottom-60" style="background-position: 50% 241px;">
 				<div class="container">
 					<div class="headline-center headline-light margin-bottom-60">
-						<h2>What People Are Saying</h2>
+						<h2>What our Students Are Saying</h2>
 						<p>Can you imagine yourself here? Learn about our students stories</p>
 					</div><!--/end Headline Center-->
 
@@ -781,7 +782,7 @@ Apply									</a>
 							<div class="flat-testimonials-in md-margin-bottom-50">
 								<img alt="" src="assets/img/team/img1-sm.jpg" class="rounded-x img-responsive">
 								<h3>Anthony Connor</h3>
-								<span class="color-green">Software Developer</span>
+								<span class="color-green">English Language Institute</span>
 								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis, magna id sem ipsum mi interduml</p>
 							</div>
 						</div>
@@ -789,7 +790,7 @@ Apply									</a>
 							<div class="flat-testimonials-in md-margin-bottom-50">
 								<img alt="" src="assets/img/team/img2-sm.jpg" class="rounded-x img-responsive">
 								<h3>Angela Danil</h3>
-								<span class="color-green">Web Designer</span>
+								<span class="color-green">Undergraduate</span>
 								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis, magna id sem ipsum mi interduml</p>
 							</div>
 						</div>
@@ -797,7 +798,7 @@ Apply									</a>
 							<div class="flat-testimonials-in">
 								<img alt="" src="assets/img/team/img3-sm.jpg" class="rounded-x img-responsive">
 								<h3>Anthony Connor</h3>
-								<span class="color-green">Software Developer</span>
+								<span class="color-green">Graduate</span>
 								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis, magna id sem ipsum mi interduml</p>
 							</div>
 						</div>
