changes on footer

--- a/Undergraduatetemplate.html
+++ b/Undergraduatetemplate.html
@@ -888,16 +888,15 @@ Apply									</a>
 					<div class="row">
 						<div class="col-md-3 col-sm-6 column-one md-margin-bottom-50">
 							<a href="index.html"><img class="footer-logo" src="assets/img/logo1-white.png" alt=""></a>
-							<p class="margin-bottom-20">Jacksonville</p>
+							<p class="margin-bottom-20">Jacksonville or JSU intl programs description add here</p>
 							<span>Headquarters:</span>
-							<p>795 Folsom Ave, Suite 600, San Francisco, CA 94107</p>
+							<p>International House, 700 Pelham Road North, Jacksonville, AL 36265</p>
 							<hr>
 							<span>Phone:</span>
-							<p>(+123) 456 7890</p>
-							<p>(+123) 456 7891</p>
+							<p>(+1) 256 782 5303</p>
 						  <hr>
 							<span>Email Address:</span>
-							<a href="#">support@htmlstream.com</a>
+							<a href="#">intladmissions@jsu.edu</a>
 						</div>
 
 						<div class="col-md-3 col-sm-6 md-margin-bottom-50">
@@ -978,136 +977,23 @@ Apply									</a>
 								<li><a href="#"><i class="rounded-x fa fa-facebook"></i></a></li>
 								<li><a href="#"><i class="rounded-x fa fa-linkedin"></i></a></li>
 								<li><a href="#"><i class="rounded-x fa fa-google-plus"></i></a></li>
-								<li><a href="#"><i class="rounded-x fa fa-dribbble"></i></a></li>
 							</ul>
 							<!-- End Social Icons -->
 						</div>
 					</div><!--/end row-->
 				</div><!--/end container-->
 			</footer>
-
 			<footer class="copyright">
 				<div class="container">
 					<ul class="list-inline terms-menu">
-						<li>2015 &copy; All Rights Reserved.</li>
-						<li class="home"><a href="#">Terms of Use</a></li>
-						<li><a href="#">Privacy and Policy</a></li>
+						<li>Last Review on January, 2017</li>
+						<li>Made with <i class="fa fa-heart"></i><a href="#"> JSU Interactive</a> </li>
 					</ul>
-				</div><!--/end container-->
+				</div>
 			</footer>
-		</div>
+		</div>				
 		<!--=== End Footer v8 ===-->
-	  <!-- Login/Reg Modal Box -->
-		<div class="cd-user-modal"> <!-- this is the entire modal form, including the background -->
-			<div class="cd-user-modal-container"> <!-- this is the container wrapper -->
-				<ul class="cd-switcher">
-					<li><a href="javascript:void(0);">Login</a></li>
-					<li><a href="javascript:void(0);">Register</a></li>
-				</ul>
-
-				<div id="cd-login"> <!-- log in form -->
-					<form class="cd-form">
-						<p class="social-login">
-							<span class="social-login-facebook"><a href="#"><i class="fa fa-facebook"></i> Facebook</a></span>
-							<span class="social-login-google"><a href="#"><i class="fa fa-google"></i> Google</a></span>
-							<span class="social-login-twitter"><a href="#"><i class="fa fa-twitter"></i> Twitter</a></span>
-						</p>
-
-						<div class="lined-text"><span>Or use your account on Unify</span><hr></div>
-
-						<p class="fieldset">
-							<label class="image-replace cd-email" for="signin-email">E-mail</label>
-							<input class="full-width has-padding has-border" id="signin-email" type="email" placeholder="E-mail">
-							<span class="cd-error-message">Error message here!</span>
-						</p>
-
-						<p class="fieldset">
-							<label class="image-replace cd-password" for="signin-password">Password</label>
-							<input class="full-width has-padding has-border" id="signin-password" type="text"  placeholder="Password">
-							<a href="javascript:void(0);" class="hide-password">Hide</a>
-							<span class="cd-error-message">Error message here!</span>
-						</p>
-
-						<p class="fieldset">
-							<input type="checkbox" id="remember-me" checked>
-							<label for="remember-me">Remember me</label>
-						</p>
-
-						<p class="fieldset">
-							<input class="full-width" type="submit" value="Login">
-						</p>
-					</form>
-
-					<p class="cd-form-bottom-message"><a href="javascript:void(0);">Forgot your password?</a></p>
-					<!-- <a href="javascript:void(0);" class="cd-close-form">Close</a> -->
-				</div> <!-- cd-login -->
-
-				<div id="cd-signup"> <!-- sign up form -->
-					<form class="cd-form">
-						<p class="social-login">
-							<span class="social-login-facebook"><a href="#"><i class="fa fa-facebook"></i> Facebook</a></span>
-							<span class="social-login-google"><a href="#"><i class="fa fa-google"></i> Google</a></span>
-							<span class="social-login-twitter"><a href="#"><i class="fa fa-twitter"></i> Twitter</a></span>
-						</p>
-
-						<div class="lined-text"><span>Or register your new account on Unify</span><hr></div>
-
-						<p class="fieldset">
-							<label class="image-replace cd-username" for="signup-username">Username</label>
-							<input class="full-width has-padding has-border" id="signup-username" type="text" placeholder="Username">
-							<span class="cd-error-message">Error message here!</span>
-						</p>
-
-						<p class="fieldset">
-							<label class="image-replace cd-email" for="signup-email">E-mail</label>
-							<input class="full-width has-padding has-border" id="signup-email" type="email" placeholder="E-mail">
-							<span class="cd-error-message">Error message here!</span>
-						</p>
-
-						<p class="fieldset">
-							<label class="image-replace cd-password" for="signup-password">Password</label>
-							<input class="full-width has-padding has-border" id="signup-password" type="text"  placeholder="Password">
-							<a href="javascript:void(0);" class="hide-password">Hide</a>
-							<span class="cd-error-message">Error message here!</span>
-						</p>
-
-						<p class="fieldset">
-							<input type="checkbox" id="accept-terms">
-							<label for="accept-terms">I agree to the <a href="javascript:void(0);">Terms</a></label>
-						</p>
-
-						<p class="fieldset">
-							<input class="full-width has-padding" type="submit" value="Create account">
-						</p>
-					</form>
-
-					<!-- <a href="javascript:void(0);" class="cd-close-form">Close</a> -->
-				</div> <!-- cd-signup -->
-
-				<div id="cd-reset-password"> <!-- reset password form -->
-					<p class="cd-form-message">Lost your password? Please enter your email address. You will receive a link to create a new password.</p>
-
-					<form class="cd-form">
-						<p class="fieldset">
-							<label class="image-replace cd-email" for="reset-email">E-mail</label>
-							<input class="full-width has-padding has-border" id="reset-email" type="email" placeholder="E-mail">
-							<span class="cd-error-message">Error message here!</span>
-						</p>
-
-						<p class="fieldset">
-							<input class="full-width has-padding" type="submit" value="Reset password">
-						</p>
-					</form>
-
-					<p class="cd-form-bottom-message"><a href="javascript:void(0);">Back to log-in</a></p>
-				</div> <!-- cd-reset-password -->
-				<a href="javascript:void(0);" class="cd-close-form">Close</a>
-			</div> <!-- cd-user-modal-container -->
-		 <!-- cd-user-modal -->
-		</div><!-- End Login/Reg Modal Box -->
 </div><!--/wrapper-->
-
-	<!-- JS Global Compulsory -->
 <script type="text/javascript" src="assets/plugins/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="assets/plugins/jquery/jquery-migrate.min.js"></script>
 <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
