--- a/ihop.html
+++ b/ihop.html
@@ -1037,7 +1037,7 @@ Transferring at least 24 academic credit   hours from accredited US institutions
 				<div class="container">
 					<ul class="list-inline terms-menu">
 						<li>Last Review on January, 2017</li>
-						<li>Made with <i class="fa fa-heart"></i><a href="#"> JSU Interactive</a> </li>
+						<li>Made with <i class="fa fa-heart"></i><a href="http://www.jsu.edu/interactive/"> JSU Interactive</a> </li>
 					</ul>
 				</div>
 			</footer>
