--- a/undergraduate.html
+++ b/undergraduate.html
@@ -1035,7 +1035,7 @@ Students in Associate Degree Program: Congratulations for achieving one of the m
 				<div class="container">
 					<ul class="list-inline terms-menu">
 						<li>Last Review on January, 2017</li>
-						<li>Made with <i class="fa fa-heart"></i><a href="#"> JSU Interactive</a> </li>
+						<li>Made with <i class="fa fa-heart"></i><a href="http://www.jsu.edu/interactive/"> JSU Interactive</a> </li>
 					</ul>
 				</div>
 			</footer>
