--- a/ihop.html
+++ b/ihop.html
@@ -87,8 +87,10 @@
 										</li>
 									</ul>
 								</li>
+								<!-- Login & Register 
 								<li class="cd-log_reg hidden-sm hidden-md hidden-lg"><strong><a class="cd-signin" href="javascript:void(0);">Login</a></strong></li>
 								<li class="cd-log_reg hidden-sm hidden-md hidden-lg"><strong><a class="cd-signup" href="javascript:void(0);">Register</a></strong></li>
+								--->
 							</ul>
 						</div>
 						<div class="col-sm-4 col-xs-4 clearfix">
@@ -172,10 +174,10 @@
 								</li>
 								<!-- End International Programs -->
 
-								<!-- World -->
+								<!-- Stories -->
 								<li class="dropdown mega-menu-fullwidth">
 									<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
-										World
+										Stories
 									</a>
 									<ul class="dropdown-menu">
 										<li>
@@ -184,10 +186,10 @@
 													<div class="row">
 														<div class="col-md-2 md-margin-bottom-30">
 															<ul class="dropdown-link-list">
-																<li><a href="#">World</a></li>
-																<li><a href="#">Economy</a></li>
-																<li><a href="#">Sport</a></li>
-																<li><a href="#">Fashion</a></li>
+																<li><a href="#"><strong>Tags</strong></a></li>
+																<li><a href="#">Business</a></li>
+																<li><a href="#">Sports</a></li>
+																<li><a href="#">Diversity</a></li>
 																<li><a href="#">Health</a></li>
 																<li><a href="#">Travel</a></li>
 																<li><a href="#">Hi-Tech</a></li>
@@ -201,7 +203,7 @@
 																	<a class="hover-grad" href="blog_single.html"><i class="fa fa-video-camera"></i></a>
 																</div>
 																<div class="blog-thumb-desc">
-																	<h3><a href="blog_single.html">You CAN be sensitive to gluten without having coeliac disease, study finds</a></h3>
+																	<h3><a href="blog_single.html">Story Title I</a></h3>
 																	<ul class="blog-thumb-info">
 																		<li>Mar 6, 2015</li>
 																		<li><a href="#"><i class="fa fa-comments"></i> 0</a></li>
@@ -217,7 +219,7 @@
 																	<a class="hover-grad" href="blog_single.html"><i class="fa fa-photo"></i></a>
 																</div>
 																<div class="blog-thumb-desc">
-																	<h3><a href="blog_single.html">Starbucks is introducing new coffee</a></h3>
+																	<h3><a href="blog_single.html">Story Title II</a></h3>
 																	<ul class="blog-thumb-info">
 																		<li>Mar 6, 2015</li>
 																		<li><a href="#"><i class="fa fa-comments"></i> 0</a></li>
@@ -233,7 +235,7 @@
 																	<a class="hover-grad" href="blog_single.html"><i class="fa fa-volume-up"></i></a>
 																</div>
 																<div class="blog-thumb-desc">
-																	<h3><a href="blog_single.html">The benefits of tea</a></h3>
+																	<h3><a href="blog_single.html">Story Title III</a></h3>
 																	<ul class="blog-thumb-info">
 																		<li>Mar 6, 2015</li>
 																		<li><a href="#"><i class="fa fa-comments"></i> 0</a></li>
@@ -266,7 +268,7 @@
 																	<a class="hover-grad" href="blog_single.html"><i class="fa fa-photo"></i></a>
 																</div>
 																<div class="blog-thumb-desc">
-																	<h3><a href="blog_single.html">Why your next glass of orange juice will cost you more</a></h3>
+																	<h3><a href="blog_single.html">Why your next experience should be study abroad</a></h3>
 																	<ul class="blog-thumb-info">
 																		<li>Mar 6, 2015</li>
 																		<li><a href="#"><i class="fa fa-comments"></i> 0</a></li>
@@ -282,7 +284,7 @@
 																	<a class="hover-grad" href="blog_single.html"><i class="fa fa-photo"></i></a>
 																</div>
 																<div class="blog-thumb-desc">
-																	<h3><a href="blog_single.html">Why your next glass of orange juice will cost you more</a></h3>
+																	<h3><a href="blog_single.html">Another Text</a></h3>
 																	<ul class="blog-thumb-info">
 																		<li>Mar 6, 2015</li>
 																		<li><a href="#"><i class="fa fa-comments"></i> 0</a></li>
@@ -297,83 +299,8 @@
 										</li>
 									</ul>
 								</li>
-								<!-- End World -->
-
-								<!-- Stories -->
-								<li class="dropdown mega-menu-fullwidth">
-									<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
-										Stories
-									</a>
-									<ul class="dropdown-menu">
-										<li>
-											<div class="mega-menu-content">
-												<div class="container">
-													<div class="row">
-														<div class="col-md-6 md-margin-bottom-30">
-															<!-- Blog Grid -->
-															<div class="blog-grid">
-																<img class="img-responsive" src="assets/img/main/img9.jpg" alt="">
-																<h3 class="blog-grid-title-sm"><a href="blog_single.html">Is this the end for fashion police?</a></h3>
-															</div>
-															<!-- End Blog Grid -->
-														</div>
-														<div class="col-md-6">
-															<!-- Blog Thumb -->
-															<div class="blog-thumb margin-bottom-20">
-																<div class="blog-thumb-hover">
-																	<img src="assets/img/main/img16.jpg" alt="">
-																	<a class="hover-grad" href="blog_single.html"><i class="fa fa-video-camera"></i></a>
-																</div>
-																<div class="blog-thumb-desc">
-																	<h3><a href="blog_single.html">Nadège Vanhee-Cybulski makes Hermès debut</a></h3>
-																	<ul class="blog-thumb-info">
-																		<li>Mar 6, 2015</li>
-																		<li><a href="blog_single.html"><i class="fa fa-comments"></i> 0</a></li>
-																	</ul>
-																</div>
-															</div>
-															<!-- End Blog Thumb -->
-
-															<!-- Blog Thumb -->
-															<div class="blog-thumb margin-bottom-20">
-																<div class="blog-thumb-hover">
-																	<img src="assets/img/main/img15.jpg" alt="">
-																	<a class="hover-grad" href="blog_single.html"><i class="fa fa-photo"></i></a>
-																</div>
-																<div class="blog-thumb-desc">
-																	<h3><a href="blog_single.html">Minimalism gives way to embroidery and crystals as Paris shows draw to a close</a></h3>
-																	<ul class="blog-thumb-info">
-																		<li>Mar 6, 2015</li>
-																		<li><a href="blog_single.html"><i class="fa fa-comments"></i> 0</a></li>
-																	</ul>
-																</div>
-															</div>
-															<!-- End Blog Thumb -->
-
-															<!-- Blog Thumb -->
-															<div class="blog-thumb margin-bottom-30">
-																<div class="blog-thumb-hover">
-																	<img src="assets/img/main/img17.jpg" alt="">
-																	<a class="hover-grad" href="blog_single.html"><i class="fa fa-photo"></i></a>
-																</div>
-																<div class="blog-thumb-desc">
-																	<h3><a href="blog_single.html">In bed with Cara Delevingne as she talks bags, boys and bunnies</a></h3>
-																	<ul class="blog-thumb-info">
-																		<li>Mar 6, 2015</li>
-																		<li><a href="blog_single.html"><i class="fa fa-comments"></i> 0</a></li>
-																	</ul>
-																</div>
-															</div>
-															<!-- End Blog Thumb -->
-														</div>
-													</div>
-												</div>
-											</div>
-										</li>
-									</ul>
-								</li>
 								<!-- End Stories -->
-
+								
 								<!-- About -->
 								<li class="dropdown mega-menu-fullwidth">
 									<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
@@ -385,28 +312,31 @@
 												<div class="container">
 													<div class="row">
 														<div class="col-md-3 md-margin-bottom-30">
-															<h2>About JSU</h2>
+															<a href="general-info.html"><h2>About JSU</h2></a>
 															<ul class="dropdown-link-list">
 																<li><a href="#">General Information</a></li>
 																<li><a href="#">Location</a></li>
-																<li><a href="#">Viewbook</a></li>
+																<li><a href="#">Academics</a></li>
 																<li><a href="#">Housing</a></li>
 																<li><a href="#">Student Life</a></li>
+																<li><a href="#">Athletics</a></li>
 																<li><a href="#">Campus Map</a></li>
 															</ul>
 														</div>
 														<div class="col-md-3 md-margin-bottom-30">
-															<h2>Connect</h2>
+															<a href="connect.html"><h2>Connect</h2></a>
 															<ul class="dropdown-link-list">
 																<li><a href="#">Social Media</a></li>
 																<li><a href="#">Newsletter</a></li>
 																<li><a href="#">Webinars</a></li>
+																<li><a href="#">Visit our Campus</a></li>
 															</ul>
 														</div>
 														<div class="col-md-3 md-margin-bottom-30">
-															<h2>Visit</h2>
+															<h2>Degree Listing</h2>
 															<ul class="dropdown-link-list">
-																<li><a href="#">World</a></li>
+																<li><a href="#">Undergraduate</a></li>
+																<li><a href="#">Graduate</a></li>
 															</ul>
 														</div>
 														<div class="col-md-3 md-margin-bottom-30">
