update information about after Undergraduate

--- a/undergraduate.html
+++ b/undergraduate.html
@@ -512,7 +512,7 @@ Apply									</a>
 								<li><a href="#messages-2" data-toggle="tab"><i class="fa fa-comments"></i> Education Curriculum</a></li>
 								<li><a href="#settings-2" data-toggle="tab"><em class="fa fa-gear"></em> Featured Major</a></li>
 								<li><a href="#StudentLife-2" data-toggle="tab"><em class="fa fa-gear"></em> Student Life</a></li>
-								<li><a href="#AfterGraduation-2" data-toggle="tab"><em class="icon-user"></em> After ELI</a></li>
+								<li><a href="#AfterGraduation-2" data-toggle="tab"><em class="icon-user"></em> After Graduation</a></li>
 								<li><a href="#EnglishRequirements-2" data-toggle="tab"><em class="fa fa-gear"></em> English Requirements</a></li>
 								<li><a href="#Tuition-and-requirements-2" data-toggle="tab"><em class="fa fa-gear"></em> Tuition and Fees</a></li>
 								<li><a href="#Transfer-2" data-toggle="tab"><em class="fa fa-gear"></em> Transfer</a></li>
@@ -604,8 +604,9 @@ Apply									</a>
 								</div>
 		  <div class="tab-pane fade in" id="AfterGraduation-2">
 <div class="heading margin-bottom-10">
-						<h2>After ELI</h2></div>																		<p>Students enrolled at ELI might complete their undergraduate or graduate program at JSU or other institutions</p>
-			  <p>Learn more about undergraduate or gradute</p>
+		<h2>After ELI</h2></div>																		
+		  		<p>International Students under F-1 visa category can apply to work Under OPT (Optional Practical training) in the United States for 12 months after graduating from their degree program. Students in STEM field are eligible for 24 extra months to be employed in their field of study. JSU international alumni are employed by Fortune 100 companies.</p>
+			 	<p>International Students may want to consider pursuing a Graduate degree program. Having an advanced degree will/may give you an opportunity to negotiate a better career option and higher financial reward.Degree</p>
 		  </div>
 								<div class="tab-pane fade in" id="EnglishRequirements-2">
 <div class="heading margin-bottom-10">
