change text on index

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ Apply									</a>
 						<b>International</b>
 					</span>
 				</h1>
-				<p>Clean and fully responsive Template.</p>
+				<p>Welcome to the International Programs at<br> Jacksonville State University</p>
 			</div>
 		</div>
 		<!-- End Interactive Slider v2 -->
