changes on information for index

--- a/index.html
+++ b/index.html
@@ -507,10 +507,10 @@ Apply									</a>
 			<div class="container">
 				<div class="call-action-v1-box">
 					<div class="call-action-v1-in">
-					  <h3>We are known as <italic>"The Friendliest Campus in the South" do not hesitate in</italic></h3>
-					  <h3>Contact us at <strong class="color-darker">intladmissions@jsu.edu</strong> or give us a call <strong class="color-darker">+1 (256) 782 5303</strong></h3>
-						
-				  </div>
+					  <h3>We are known as <italic>"The Friendliest Campus in the South" do not hesitate and</italic>
+					  </h3>
+					  <h3>email us at <strong class="color-darker">intladmissions@jsu.edu</strong> or give us a call at <strong class="color-darker">+1 (256) 782 5303</strong></h3>
+					</div>
 					<div class="call-action-v1-in inner-btn page-scroll">
 						<a href="#portfolio" class="btn-u btn-u-lg btn-brd btn-brd-width-2 btn-brd-hover btn-u-dark btn-u-block">Apply Today</a>
 					</div>
@@ -522,26 +522,39 @@ Apply									</a>
 		<!--=== Content Part ===-->
 		<div class="content-md">
 			<div class="container">
-				<!-- Service Box -->
-				<div class="row text-center margin-bottom-60">
-					<div class="col-md-4 md-margin-bottom-50">
-						<img alt="" src="assets/img/icons/flat/01.png" class="image-md margin-bottom-20">
-						<h1 class="title-v3-md margin-bottom-10">Fully Responsive</h1>
-						<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cur modo, tortor mauris con</p>
+				<div class="row margin-bottom-60">
+					<!-- Owl Carousel v5 -->
+					<div class="col-sm-6">
+							<div class="owl-slider-v5">
+								<div class="item">
+									<img class="full-width img-responsive" src="assets/img/main/img12.jpg" alt="">
+								</div>
+							</div>
 					</div>
-					<div class="col-md-4 flat-service md-margin-bottom-50">
-						<img alt="" src="assets/img/icons/flat/02.png" class="image-md margin-bottom-20">
-						<h2 class="title-v3-md margin-bottom-10">HTML5 + CSS3</h2>
-						<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cur modo, tortor mauris con</p>
+					<!-- End Owl Carousel v5 -->
+					<div class="col-sm-6">
+						<h3>A window to the world</h3><br>
+						<p>We at Jacksonville State University recognize and appreciate the fact that International students like yourself add tremendous value to the campus experience that each student at JSU can have. We are
+						fortunate that we get to serve over 200 international students from Europe, Asia, North and South
+							America, Africa, and the Middle East, are enrolled here.</p><p>
+Our goals remain intact which is to always strive to provide you with an environment in which you can
+easily learn and get exposure to American culture, and in which students from Alabama can learn about
+your culture. JSU has shown a long commitment to an international environment on campus with the
+establishment in 1946 of one of the first International House Programs in the country. Today, we are
+						proud to continue this tradition.</p>
+<p>We undoubtedly live in a very globally connected world where we have an absolute obligation to provide
+inter-cultural opportunity to all of our students including yourself. We therefore, seek to continue
+welcoming our international students from all around the world and give you an opportunity to engage
+	with the entire campus while pursuing your academic goals.</p>
+<p>As a former International student, I understand the need for students to feel accepted and cared for. We
+at Jacksonville State University, takes pride in our belief that we are here to serve our students. We serve
+each individual students with respect and care no matter where they come from. All of our students
+become part of one big Gamecock Family once they come to JSU.
+	I look forward to seeing each one of you.</p><br><p>Chandni Khadka</p><br>
+						<button class="btn-u text-uppercase" type="button">Our Programs</button>
 					</div>
-					<div class="col-md-4 flat-service">
-						<img alt="" src="assets/img/icons/flat/03.png" class="image-md margin-bottom-20">
-						<h2 class="title-v3-md margin-bottom-10">Launch Ready</h2>
-						<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cur modo, tortor mauris con</p>
-					</div>
-				</div>
-				<!-- End Service Box -->
-			</div><!--/container -->
+				</div><!--/end row-->
+			</div><!--/end container-->
 
 			<div class="bg-color-light">
 				<div class="container content-sm">
@@ -568,62 +581,46 @@ Apply									</a>
 			</div>
 			<div class="container content-sm">
 				<div class="headline-center margin-bottom-60">
-				  <h2>Our International Progams</h2>
+				  <h2>Our Progams</h2>
 				  <p>Integer odio ligula, tincidunt id volutpat et, imperdiet eget mi. Quisque laoreet porttitor turpis sed <a href="#">fermentum</a>. Nullam sodales blandit nisi, tristique tempor nunc hendrerit at. Sed posuere mollis orci</p>
 				</div><!--/end Headline Center-->
 
 				<!-- Portfolio Box -->
-				<ul class="list-unstyled row port	folio-box">
+				<ul class="list-unstyled">
 					<li class="col-sm-6 md-margin-bottom-50">
-						<a href="assets/img/main/img9.jpg" title="Project One" data-rel="gallery" class="thumbnail fancybox">
+						<a href="eli.html" title="English Language Institute" class="thumbnail">
 							<img alt="" src="assets/img/main/img9.jpg" class="full-width img-responsive">
-							<span class="rounded-x portfolio-box-in">
-								<i class="icon-magnifier-add"></i>
-							</span>
 						</a>
 						<div class="headline-left margin-bottom-10">
 						  <h3 class="headline-brd">English Language Institue</h3>
 						</div>
-						<small class="project-tag"><i class="fa fa-tag"></i><a href="#">Technology</a>, <a href="#">Business</a></small>
 						<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet </p>
 					</li>
 					<li class="col-sm-6 md-margin-bottom-50">
-						<a href="assets/img/main/img22.jpg" title="Project Two" data-rel="gallery" class="thumbnail fancybox">
+						<a href="ihop.html" title="International House Program" class="thumbnail">
 							<img alt="" src="assets/img/main/img22.jpg" class="full-width img-responsive">
-							<span class="rounded-x portfolio-box-in">
-								<i class="icon-magnifier-add"></i>
-							</span>
 						</a>
 						<div class="headline-left margin-bottom-10">
 						  <h3 class="headline-brd">International House Program</h3>
 						</div>
-						<small class="project-tag"><i class="fa fa-tag"></i><a href="#">Technology</a>, <div class="headline-left margin-bottom-10"></div></small>
 						<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet </p>
 					</li>
-					<li class="col-sm-6">
-						<a href="assets/img/main/img18.jpg" title="Project Three" data-rel="gallery" class="thumbnail fancybox">
+					<li class="col-sm-6 md-margin-bottom-50">
+						<a href="undergraduate.html" title="Project Three" class="thumbnail">
 							<img src="assets/img/main/img18.jpg" class="full-width img-responsive">
-							<span class="rounded-x portfolio-box-in">
-								<em class="icon-magnifier-add"></em>
-							</span>
 						</a>
 						<div class="headline-left margin-bottom-10">
 						  <h3 class="headline-brd">Undergraduate</h3>
 						</div>
-						<small class="project-tag"><i class="fa fa-tag"></i><a href="#">Technology</a>, <a href="#">Business</a></small>
 						<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet </p>
 					</li>
 					<li class="col-sm-6">
-						<a href="assets/img/main/img18.jpg" title="Project Three" data-rel="gallery" class="thumbnail fancybox">
+						<a href="graduate.html" title="Project Three" class="thumbnail">
 							<img alt="" src="assets/img/main/img18.jpg" class="full-width img-responsive">
-							<span class="rounded-x portfolio-box-in">
-								<i class="icon-magnifier-add"></i>
-							</span>
 						</a>
 						<div class="headline-left margin-bottom-10">
 						  <h3 class="headline-brd">Graduate</h3>
 						</div>
-						<small class="project-tag"><i class="fa fa-tag"></i><a href="#">Technology</a>, <a href="#">Business</a></small>
 						<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet </p>
 					</li>
 				</ul>
@@ -666,38 +663,6 @@ Apply									</a>
 				</div><!--/end container-->
 			</div>
 			<!-- End Flat Background Block -->
-
-			<div class="container">
-				<div class="headline-left margin-bottom-40">
-					<h2 class="headline-brd">Latest Shots</h2>
-				</div><!--/end Headline Left-->
-
-				<div class="row margin-bottom-60">
-					<!-- Owl Carousel v5 -->
-					<div class="col-sm-6">
-						<div class="owl-carousel-v5">
-							<div class="owl-slider-v5">
-								<div class="item">
-									<img class="full-width img-responsive" src="assets/img/main/img12.jpg" alt="">
-								</div>
-								<div class="item">
-									<img class="full-width img-responsive" src="assets/img/main/img16.jpg" alt="">
-								</div>
-								<div class="item">
-									<img class="full-width img-responsive" src="assets/img/main/img22.jpg" alt="">
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- End Owl Carousel v5 -->
-					<div class="col-sm-6">
-						<h3>Justo cras odio apibus ac afilisi</h3><br>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In porta ipsum vel mi gravida mattis. Ut sit amet laoreet diam. Fusce iaculis sollicitudin purus, in tristique urna. Suspendisse potenti. Fusce non sem efficitur leo fermentum porttitor ut vitae orci. Aliquam erat volutpat.</p><br>
-						<p>Sed consectetur blandit ornare. Etiam at ante est. Nunc sed luctus ipsum, eu tincidunt justo. Sed id venenatis tellus. Mauris a cursus dolor. Maecenas sed magna non est interdum sollicitudin eget vitae ex. Ut eget lacus lorem.</p><br>
-						<button class="btn-u text-uppercase" type="button">View More</button>
-					</div>
-				</div><!--/end row-->
-			</div><!--/end container-->
 
 			<!-- Flat Testimonials -->
 			<div class="flat-testimonials bg-image-v1 parallaxBg1 margin-bottom-60" style="background-position: 50% 241px;">
