changes made on index

--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ welcoming our international students from all around the world and give you an o
 at Jacksonville State University, takes pride in our belief that we are here to serve our students. We serve
 each individual students with respect and care no matter where they come from. All of our students
 become part of one big Gamecock Family once they come to JSU.
-	I look forward to seeing each one of you.</p><br><p>Chandni Khadka</p><br>
+	I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>Director International Programs<br>Jacksonville State University</p><br>
 						<button class="btn-u text-uppercase" type="button">Our Programs</button>
 					</div>
 				</div><!--/end row-->
