--- a/index.html
+++ b/index.html
@@ -560,14 +560,14 @@ become part of one big Gamecock Family once they come to JSU.
 			<div class="bg-color-light">
 				<div class="container content-sm">
 					<div class="row">
-						<div class="col-md-6 md-margin-bottom-50">
-							<img alt="" src="assets/img/mockup/imac2.png" class="img-responsive">
+						<div class="col-md-6 md-margin-bottom-10">
+							<img alt="" src="assets/img/index-img/JSU International Students.jpg" class="img-responsive">
 						</div>
 						<div class="col-md-6">
 							<br><br><br>
 							<div class="headline-left margin-bottom-30">
-								<h2 class="headline-brd">WE ARE UNIFY AGENCY</h2>
-								<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+							  <h2 class="headline-brd">JSU is going places</h2>
+							  <p>From the moment you step on the campus of Jacksonville State University you’ll discover that you are not the only one invested in your future.</p>
 							</div>
 							<ul class="list-unstyled lists-v2 margin-bottom-30">
 								<li><i class="fa fa-check"></i> Suspendisse eget augue non dolor ultrices</li>
@@ -575,7 +575,7 @@ become part of one big Gamecock Family once they come to JSU.
 								<li><i class="fa fa-check"></i> Curabitur ut augue at mi eleifend lobortis</li>
 								<li><i class="fa fa-check"></i> Eleifend eget aliquet tortor, quis lacinia dolor</li>
 							</ul>
-							<a class="btn-u btn-brd btn-brd-hover btn-u-dark" href="#">Learn More</a>
+							<a class="btn-u btn-brd btn-brd-hover btn-u-dark" href="about.html">Learn More About JSU</a>
 						</div><!--/end row-->
 					</div>
 				</div>
@@ -599,7 +599,7 @@ become part of one big Gamecock Family once they come to JSU.
 					</li>
 					<li class="col-sm-6 md-margin-bottom-50">
 						<a href="ihop.html" title="International House Program" class="thumbnail">
-							<img alt="" src="assets/img/main/img22.jpg" class="full-width img-responsive">
+							<img alt="" src="assets/img/index-img/JSU International-House.jpg" class="full-width img-responsive">
 						</a>
 						<div class="headline-left margin-bottom-10">
 						  <h3 class="headline-brd">International House Program</h3>
@@ -617,7 +617,7 @@ become part of one big Gamecock Family once they come to JSU.
 					</li>
 					<li class="col-sm-6">
 						<a href="graduate.html" title="Project Three" class="thumbnail">
-							<img alt="" src="assets/img/main/img18.jpg" class="full-width img-responsive">
+							<img alt="" src="assets/img/index-img/JSU Graduate.jpg" class="full-width img-responsive">
 						</a>
 						<div class="headline-left margin-bottom-10">
 						  <h3 class="headline-brd">Graduate</h3>
@@ -677,7 +677,7 @@ become part of one big Gamecock Family once they come to JSU.
 						<div class="col-sm-4">
 							<div class="flat-testimonials-in md-margin-bottom-50">
 								<img alt="" src="assets/img/team/img1-sm.jpg" class="rounded-x img-responsive">
-								<h3>Anthony Connor</h3>
+								<h3>No Name</h3>
 								<span class="color-green">English Language Institute</span>
 								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis, magna id sem ipsum mi interduml</p>
 							</div>
@@ -685,7 +685,7 @@ become part of one big Gamecock Family once they come to JSU.
 						<div class="col-sm-4">
 							<div class="flat-testimonials-in md-margin-bottom-50">
 								<img alt="" src="assets/img/team/img2-sm.jpg" class="rounded-x img-responsive">
-								<h3>Angela Danil</h3>
+								<h3>No Name</h3>
 								<span class="color-green">Undergraduate</span>
 								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis, magna id sem ipsum mi interduml</p>
 							</div>
@@ -693,7 +693,7 @@ become part of one big Gamecock Family once they come to JSU.
 						<div class="col-sm-4">
 							<div class="flat-testimonials-in">
 								<img alt="" src="assets/img/team/img3-sm.jpg" class="rounded-x img-responsive">
-								<h3>Anthony Connor</h3>
+								<h3>No Name</h3>
 								<span class="color-green">Graduate</span>
 								<p>Proin et augue vel nisi rhoncus tincidunt. Cras venenatis, magna id sem ipsum mi interduml</p>
 							</div>
