--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@ become part of one big Gamecock Family once they come to JSU.
 					</li>
 					<li class="col-sm-6 md-margin-bottom-50">
 						<a href="undergraduate.html" title="Project Three" class="thumbnail">
-							<img src="assets/img/main/img18.jpg" class="full-width img-responsive">
+							<img src="assets/img/index-img/JSU Undergraduate.jpg" class="full-width img-responsive">
 						</a>
 						<div class="headline-left margin-bottom-10">
 						  <h3 class="headline-brd">Undergraduate</h3>
