changes on footer an main template

--- a/index.html
+++ b/index.html
@@ -788,37 +788,32 @@ become part of one big Gamecock Family once they come to JSU.
 							<h2>Tags</h2>
 							<!-- Tag Links v4 -->
 							<ul class="tags-v4 margin-bottom-40">
-								<li><a class="rounded-4x" href="#">java</a></li>
-								<li><a class="rounded-4x" href="#">featured</a></li>
-								<li><a class="rounded-4x" href="#">pattern</a></li>
-								<li><a class="rounded-4x" href="#">web</a></li>
-								<li><a class="rounded-4x" href="#">fashion</a></li>
-								<li><a class="rounded-4x" href="#">wrapbootstrap</a></li>
-								<li><a class="rounded-4x" href="#">css3</a></li>
-								<li><a class="rounded-4x" href="#">foto</a></li>
-								<li><a class="rounded-4x" href="#">google</a></li>
-								<li><a class="rounded-4x" href="#">html5</a></li>
+								<li><a class="rounded-4x" href="#">Business</a></li>
+								<li><a class="rounded-4x" href="#">Education</a></li>
+								<li><a class="rounded-4x" href="#">Web</a></li>
+								<li><a class="rounded-4x" href="#">Entrepreneurship</a></li>
 							</ul>
 							<!-- End Tag Links v4 -->
 
 							<h2>Useful Links</h2>
 							<!-- Footer Lists -->
 							<ul class="footer-lists">
-								<li><i class="fa fa-angle-right"></i><a href="#">Wrapbootstrap</a></li>
-								<li><i class="fa fa-angle-right"></i><a href="#">Google</a></li>
-								<li><i class="fa fa-angle-right"></i><a href="#">Marketing</a></li>
-								<li><i class="fa fa-angle-right"></i><a href="#">Support Forum</a></li>
+								<li><i class="fa fa-angle-right"></i><a href="#">About</a></li>
+								<li><i class="fa fa-angle-right"></i><a href="#">ELI</a></li>
+								<li><i class="fa fa-angle-right"></i><a href="#">International House</a></li>
+								<li><i class="fa fa-angle-right"></i><a href="#">Undergraduate</a></li>
+								<li><i class="fa fa-angle-right"></i><a href="#">Graduate</a></li>
 								<li><i class="fa fa-angle-right"></i><a href="#">Themes</a></li>
 							</ul>
 							<!-- End Footer Lists -->
 						</div>
 
 						<div class="col-md-3 col-sm-6 md-margin-bottom-50">
-							<h2>Latest News</h2>
+							<h2>Latest Stories</h2>
 							<!-- Latest News -->
 							<div class="latest-news margin-bottom-20">
 								<img src="assets/img/thumb/01.jpg" alt="">
-								<h3><a href="#">Standard post with video.</a></h3>
+								<h3><a href="#">Standard post</a></h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 							</div>
 
@@ -826,7 +821,7 @@ become part of one big Gamecock Family once they come to JSU.
 
 							<div class="latest-news margin-bottom-20">
 								<img src="assets/img/thumb/02.jpg" alt="">
-								<h3><a href="#">Standard post with video.</a></h3>
+								<h3><a href="#">Standard post</a></h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 							</div>
 
@@ -834,7 +829,7 @@ become part of one big Gamecock Family once they come to JSU.
 
 							<div class="latest-news">
 								<img src="assets/img/thumb/01.jpg" alt="">
-								<h3><a href="#">Standard post with video.</a></h3>
+								<h3><a href="#">Standard</a></h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 							</div>
 							<!-- End Latest News -->
@@ -872,7 +867,7 @@ become part of one big Gamecock Family once they come to JSU.
 				<div class="container">
 					<ul class="list-inline terms-menu">
 						<li>Last Review on January, 2017</li>
-						<li>Made with <i class="fa fa-heart"></i><a href="http://www.jsu.edu/interactive/"> JSU Interactive</a> </li>
+						<li>Made with <em class="fa fa-heart"></em><a href="http://www.jsu.edu/interactive/"> at JSU Interactive</a></li>
 					</ul>
 				</div>
 			</footer>
