--- a/ihop.html
+++ b/ihop.html
@@ -944,7 +944,8 @@ Transferring at least 24 academic credit   hours from accredited US institutions
 							<!-- End Form Group -->
 
 							<h2>Social Network</h2>
-							<p><strong>Follow Us</strong> If you want to be kept up to date about what’s going on, minute by minute, then search for Grant and give us a follow!</p><br>
+							<p><strong>Follow Us</strong> If you want to be kept up to date about what’s going on, minute by minute!</p>
+							<br>
 
 							<!-- Social Icons -->
 							<ul class="social-icon-list margin-bottom-20">
